# osu-stamina-trainer

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.ost-bot  Dockerfile.ost-server  Dockerfile.ost-tasks  Dockerfile.ost-website  LICENSE  Procfile  README.md  app.js  authManager.js  commandsManager.js  dictionary.js  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: .env.example  deploy.yml  main.yml
commands/: commandsManager.js  recommend.js  report.js  request.js  sharedResources.js
dictionary/: en.json
ost-bot/: .env.example  .eslintrc.js  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
ost-bot/src/: app.ts  discord.ts  i18n.ts  messageDispatcher.ts  models.ts
ost-bot/src/commands/: analyze.ts  language.ts  request.ts  updateLanguage.ts
ost-bot/src/discord/: formatter.ts  messageHandler.ts
ost-bot/src/osu/: formatter.ts  messageHandler.ts  models.ts
ost-bot/tests/: analyze.test.ts  request.test.ts  setup.ts  updateLanguage.test.ts
ost-bot/tests/commands/: analyze.test.ts  help.test.ts  language.test.ts  request.test.ts
ost-server/: .env.example  Cargo.toml
ost-server/migrations/: 20220424020703_setup.sql  20220914195105_duplicated_requests_bug.sql  20220915052419_bot_usage_tracking.sql  20230424114043_password_length.sql  20230720221624_reduce_stream_length_minimum.sql  20230721014957_reduce_stream_length_minimum_dt.sql
ost-server/src/: error.rs  main.rs
ost-server/src/collection_generator/: db.rs  mod.rs  osdb.rs
ost-server/src/models/: beatmap.rs  filter.rs  mod.rs  moderator.rs  order.rs  submission.rs  tracking.rs  unchecked_submission.rs  user.rs
ost-server/src/routes/: authentication.rs  beatmap.rs  bot.rs  mod.rs  moderator.rs  submission.rs
ost-server/test_files/: bpm.db  bpm.osdb  collection.db  collection.osdb
ost-tasks/: .env.example  .gitignore  Cargo.toml
ost-tasks/src/: main.rs  osu_files.rs
ost-tasks/src/models/: beatmap.rs  mod.rs  submission.rs  unchecked_submission.rs
ost-tasks/src/tasks/: mod.rs  periodic.rs  setup.rs
ost-utils/: .env.example  Cargo.toml
ost-utils/src/: lib.rs
ost-utils/src/beatmaps_processor/: error.rs  mod.rs  models.rs  streams_processor.rs
ost-utils/src/osu_api/: error.rs  mod.rs  models.rs
ost-utils/src/storage/: error.rs  mod.rs  models.rs
ost-utils/test_files/: test.osu  test_doubles.osu  test_no_streams.osu
ost-website/: .env.example  .eslintrc.js  .prettierignore  next-i18next.config.js  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
ost-website/components/: layout.tsx  navigation-bar.tsx  numeric-input.tsx  pagination.tsx
ost-website/components/beatmaps/: card.tsx  search-bar.tsx  search-filters.tsx
ost-website/components/submissions/: card.tsx  search-bar.tsx
ost-website/lib/: session.ts
ost-website/models/: beatmap.ts  botFilter.ts  submission.ts
ost-website/pages/: _app.tsx  _document.tsx  commands.tsx  index.tsx  login.tsx  submissions.tsx  submit.tsx
ost-website/styles/: _variables.scss  globals.scss
ost-website/styles/components/: layout.module.scss  navigation-bar.module.scss  pagination.module.scss
ost-website/styles/pages/: commands.module.scss  index.module.scss  login.module.scss  submissions.module.scss  submit.module.scss
resources/database/: reset.sql  setup.sql
resources/oppai/: oppai
resources/ost-wasm-utils/: Cargo.toml  README.md  test.osu
resources/ost-wasm-utils/pkg/: ost_wasm_utils.d.ts  ost_wasm_utils.js  ost_wasm_utils_bg.wasm  ost_wasm_utils_bg.wasm.d.ts  package.json
resources/ost-wasm-utils/src/: lib.rs
resources/ost-wasm-utils/src/collection_generator/: db.rs  mod.rs  osdb.rs
resources/ost-wasm-utils/src/stream_detector/: bpm_estimator.rs  mod.rs  stream_detector.rs
resources/ost-wasm-utils/src/stream_detector/models/: beatmap.rs  hit_object_interval.rs  mod.rs  stream.rs
resources/osu-stream-detector/: osu_stream_detector.d.ts  osu_stream_detector.js  osu_stream_detector_bg.wasm  osu_stream_detector_bg.wasm.d.ts  package.json
resources/streamDetector/: osu-stream-detector
src/: index.ts  process.ts  processRankedBeatmaps.ts  updateCollection.ts
src/bot/: commands.ts  dictionary.ts  filtersProperties.json  models.ts  request.ts
src/bot/request/: models.ts  request.ts
src/osuApi/: osuApiService.ts
src/osuApi/models/: beatmap.ts  beatmapset.ts
src/processing/beatmapProcessing/: beatmapProcessor.ts  oppaiInterpreter.ts  streamProcessor.ts
src/processing/models/: processingBeatmap.ts
src/processing/services/: api.ts  osu.ts
src/processing/tasks/: BeatmapsStatisticsUpdater.ts  baseTask.ts  rankedBeatmapsProcessor.ts  submissionsProcessor.ts
src/server/: app.ts
src/server/logic/: authentication.ts  fileManager.ts
src/server/models/: beatmap.ts  database.ts  filter.ts  sort.ts  submission.ts  user.ts
src/server/routes/: api.router.ts  api.ts  (+4 more)
tests/: commands.test.js
tests/bot/: commands.test.ts
(+53 files in other folders)
