[package]
name = "ost-server"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
async-compression = { version = "0.3.14", features = ["gzip", "tokio"] }
axum = { version = "0.5.16", features = ["headers"] }
base64 = "0.13.0"
chrono = "0.4.22"
dotenv = "0.15.0"
ost-utils = { path = "../ost-utils" }
rand_core = { version = "0.6.3", features = ["std"] }
redis = { version = "0.21.6", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6.1", features = [
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.21.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
