[package]
name = "ost-server"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
async-compression = { version = "0.3.15", features = ["gzip", "tokio"] }
axum = { version = "0.6.16", features = ["headers"] }
base64 = "0.21.0"
chrono = "0.4.24"
dotenv = "0.15.0"
ost-utils = { path = "../ost-utils" }
rand_core = { version = "0.6.4", features = ["std"] }
redis = { version = "0.23.0", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", features = [
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
