[package]
name = "ost-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
aws-config = "0.48.0"
aws-sdk-s3 = "0.18.0"
aws-smithy-http = "0.48.0"
base64 = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
reqwest = { version = "0.11.11", features = ["json"] }
rosu-pp = { version = "0.8.0", features = ["async_tokio"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["time", "sync"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.21.1", features = ["macros", "rt"] }
