[package]
name = "ost-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
aws-smithy-http = "0.55.1"
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.16", features = ["json"] }
rosu-pp = { version = "0.9.4", features = ["async_tokio"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["time", "sync"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.27.0", features = ["macros", "rt"] }
