[package]
name = "ost-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-smithy-http = "0.55.3"
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json"] }
rosu-pp = { version = "0.9.4", features = ["async_tokio"] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["time", "sync"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.29.1", features = ["macros", "rt"] }
